Creado mediante Colaboratory

--- a/1_DeepLearning_Fundaments/clase_2_2_DL.ipynb
+++ b/1_DeepLearning_Fundaments/clase_2_2_DL.ipynb
@@ -60,20 +60,39 @@
         "import tensorflow as tf\n",
         "from tensorflow import keras"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "l1Js6ZbJKjPk"
+        "id": "l1Js6ZbJKjPk",
+        "outputId": "49e288ac-bd1a-4fb9-a6de-0c1f6daf3dcf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "fashion_dataset = keras.datasets.fashion_mnist\n",
-        "(train_images, train_labels), (test_images, test_labels) = fashion_dataset.load_data()\n"
+        "(train_images, train_labels), (test_images, test_labels) = fashion_dataset.load_data()"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/train-labels-idx1-ubyte.gz\n",
+            "32768/29515 [=================================] - 0s 0us/step\n",
+            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/train-images-idx3-ubyte.gz\n",
+            "26427392/26421880 [==============================] - 0s 0us/step\n",
+            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/t10k-labels-idx1-ubyte.gz\n",
+            "8192/5148 [===============================================] - 0s 0us/step\n",
+            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/t10k-images-idx3-ubyte.gz\n",
+            "4423680/4422102 [==============================] - 0s 0us/step\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -92,7 +111,7 @@
       "source": [
         "class_names = ['Polera', 'Pantalon', 'Sueter', 'Vestido', 'Abrigado', 'Sandalia', 'Camisa', 'Sneaker', 'Mochila', 'Bota']"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -103,25 +122,25 @@
           "height": 282
         },
         "id": "7sdkjoe2Mf2L",
-        "outputId": "240ea47e-c39d-475a-9f0e-6dc2a55fedd7"
+        "outputId": "37bb9b00-da9e-4075-b5a0-9b1cd6225e59"
       },
       "source": [
         "plt.figure() \n",
         "plt.imshow(np.squeeze(train_images[320]))"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.image.AxesImage at 0x7f816bdc2190>"
+              "<matplotlib.image.AxesImage at 0x7f1aa4edf550>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 42
+          "execution_count": 4
         },
         {
           "output_type": "display_data",
@@ -155,12 +174,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2fsVynttLIrC",
-        "outputId": "3f9f1a61-9efa-4c2d-9c42-91393745702b"
+        "outputId": "bb8bee1f-5b76-4496-a86f-b08ea445d890"
       },
       "source": [
         "train_images.shape"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -172,7 +191,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 43
+          "execution_count": 5
         }
       ]
     },
@@ -183,12 +202,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hkyDSUsDLRTy",
-        "outputId": "e263f1c8-9c9d-4023-f8fe-7b28e9be0dea"
+        "outputId": "f3499907-b9b7-49ea-8e27-41987a4d01d9"
       },
       "source": [
         "test_images.shape"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -200,7 +219,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 44
+          "execution_count": 6
         }
       ]
     },
@@ -220,7 +239,7 @@
         "id": "DjTgBD5iLW2G"
       },
       "source": [
-        "# poner codigo acá"
+        "z = "
       ],
       "execution_count": null,
       "outputs": []
