Creado mediante Colaboratory

--- a/1_DeepLearning_Fundaments/clase_1_DL.ipynb
+++ b/1_DeepLearning_Fundaments/clase_1_DL.ipynb
@@ -104,7 +104,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 281
         },
-        "outputId": "59c6b006-86dc-44c9-d27b-f8f193df017a"
+        "outputId": "9d784bd2-3b93-4376-f2f8-086e8674fecc"
       },
       "source": [
         "plot_function(step_function, 'Step Function')"
@@ -156,7 +156,7 @@
           "height": 281
         },
         "id": "3OFdhqFjxyxC",
-        "outputId": "61ffd4bd-e1f9-4c5b-ec4b-4dc51357ea6e"
+        "outputId": "e631f28f-f32a-4271-ec44-c66f0b25d634"
       },
       "source": [
         "plot_function(sigmoid_function, 'Sigmoid Function')"
@@ -209,7 +209,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 281
         },
-        "outputId": "70d2b1fc-569f-409c-a34a-72f788d358ca"
+        "outputId": "a882000f-c3f5-4318-9b96-755ef9300d13"
       },
       "source": [
         "plot_function(relu_function, 'Relu Function')"
@@ -252,7 +252,7 @@
           "height": 281
         },
         "id": "VbBzBn7WxhDP",
-        "outputId": "d8390600-00b4-45d5-dd88-af29bf4a96f0"
+        "outputId": "85c886fd-c050-4360-9ce0-6c2b89da9ffb"
       },
       "source": [
         "plot_function(leakyRL_function, 'Leaky Relu Function')"
@@ -370,10 +370,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "divJh7tVbUcS",
-        "outputId": "5ddbd34a-0fe6-483d-d99c-08a1552c1acc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "09f5cc0a-ebbb-4d09-9e20-1bf9bf6ee7d3"
       },
       "source": [
         "tabla_and.shape[0]"
@@ -398,10 +398,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "PbceTX5HbaxQ",
-        "outputId": "7a954e20-9661-4b39-a16f-5c82a3a2b6e8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "0a14f438-9ace-42e0-ba83-f4a025ab2799"
       },
       "source": [
         "for i in range(tabla_and.shape[0]):\n",
@@ -425,10 +425,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "bVmB9kF3bh00",
-        "outputId": "1dcd2f3f-6747-4aa4-e82b-0b450f6dba8c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "480bb754-04fc-4d77-b3dc-24cf1d223c86"
       },
       "source": [
         "for i in range(tabla_and.shape[0]):\n",
@@ -452,10 +452,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "MRv6Lyf-buz5",
-        "outputId": "83953631-4283-4862-8624-ce44f2115ce4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "287a6433-9d6a-4c42-b9e5-df6319e646b4"
       },
       "source": [
         "for i in range(tabla_and.shape[0]):\n",
@@ -587,10 +587,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "pldvZr3lgbO7",
-        "outputId": "7b418fa3-bcca-42b5-9899-ac32cd25214e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "5e111796-b2ed-4782-b13f-93de5dd4337e"
       },
       "source": [
         "for i in range(tabla_and.shape[0]):\n",
@@ -624,11 +624,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "lvjmjT6CdmtA",
-        "outputId": "18ba4954-711f-44b8-98f8-c179848d8b19",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 500
-        }
+        },
+        "outputId": "6f3a9d75-49c3-4a2f-c8e7-9e0de142fe3b"
       },
       "source": [
         "from sklearn import datasets\n",
@@ -643,7 +643,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[<matplotlib.lines.Line2D at 0x7fb6cdf9c390>]"
+              "[<matplotlib.lines.Line2D at 0x7fc6c0505110>]"
             ]
           },
           "metadata": {
@@ -670,10 +670,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "UQm5h8lFs8sH",
-        "outputId": "901a1c54-50d7-4822-90a7-45b390265200",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "2bf6cd5b-50eb-4dc8-f2cc-f6fc80d13462"
       },
       "source": [
         "X[28]"
@@ -697,6 +697,37 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "gbxsD9Fd_Bki",
+        "outputId": "2b30d6a2-9ac9-4b70-e177-9059191d6acc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "A= np.zeros((3,1))\n",
+        "A= A+[1]"
+      ],
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[0.],\n",
+              "       [0.],\n",
+              "       [0.]])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 26
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "PimUqWuNfhlD"
       },
       "source": [
@@ -708,16 +739,13 @@
         "    \n",
         "    for epoch in range(epochs):        \n",
         "        for indice, registro in enumerate(X):  \n",
-        "            registro = np.insert(registro, 0, 1).reshape(-1,1)\n",
-        "            \n",
-        "            y_prediccion = unit_step(np.dot(registro.T, pesos))\n",
-        "            \n",
+        "            registro = np.insert(registro, 0, 1).reshape(-1,1)            \n",
+        "            y_prediccion = unit_step(np.dot(registro.T, pesos))            \n",
         "            if (np.squeeze(y_prediccion) - y[indice]) != 0:\n",
-        "                pesos += lr*((y[indice] - y_prediccion)*registro)\n",
-        "        \n",
+        "                pesos += lr*((y[indice] - y_prediccion)*registro)        \n",
         "    return pesos"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -738,24 +766,24 @@
         "    plt.title(\"Perceptron\")\n",
         "    plt.plot(x1, x2, 'y-')"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "3AqVpqQsdFwy",
-        "outputId": "25cfcaeb-34c3-4309-d754-bb003d2d4f44",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 499
-        }
+        },
+        "outputId": "25cfcaeb-34c3-4309-d754-bb003d2d4f44"
       },
       "source": [
         "pesos= perceptron(X, y, 0.5, 500)\n",
         "plot_decision_boundary(X, pesos)"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
