Creado mediante Colaboratory

--- a/3_RecurrentNeuralNets/embeddings.ipynb
+++ b/3_RecurrentNeuralNets/embeddings.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "name": "embeddings.ipynb",
       "provenance": [],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -47,13 +46,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "GwgMW1hv5Y_Q",
-        "outputId": "bb06abd5-a2f6-4135-b55c-f02eb88ebd0c"
+        "outputId": "b4f3bcfa-025a-4d1b-d8a4-df9233a3630a"
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -78,19 +77,102 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "NtGSww8n8tnP"
+        "id": "NtGSww8n8tnP",
+        "outputId": "a8169b66-45c8-4af7-d22c-e84f102fe6cc",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 1000
+        }
       },
       "source": [
         "# load english vectors\n",
+        "from torchtext import vocab\n",
         "\n",
-        "import torchtext.vocab\n",
-        "\n",
-        "glove = torchtext.vocab.GloVe(name='6B', dim=100)\n",
+        "glove = vocab.GloVe(name='6B', dim=100)\n",
         "\n",
         "print(\"Hay {} palabras en el vocabulario\".format(len(glove.itos)))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            ".vector_cache/glove.6B.zip: 862MB [02:40, 5.38MB/s]                           \n",
+            "ERROR:root:Internal Python error in the inspect module.\n",
+            "Below is the traceback from this internal error.\n",
+            "\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "Traceback (most recent call last):\n",
+            "  File \"/usr/local/lib/python3.7/dist-packages/IPython/core/interactiveshell.py\", line 2882, in run_code\n",
+            "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
+            "  File \"<ipython-input-2-c3745af07af2>\", line 4, in <module>\n",
+            "    glove = vocab.GloVe(name='6B', dim=100)\n",
+            "  File \"/usr/local/lib/python3.7/dist-packages/torchtext/vocab.py\", line 487, in __init__\n",
+            "    super(GloVe, self).__init__(name, url=url, **kwargs)\n",
+            "  File \"/usr/local/lib/python3.7/dist-packages/torchtext/vocab.py\", line 326, in __init__\n",
+            "    self.cache(name, cache, url=url, max_vectors=max_vectors)\n",
+            "  File \"/usr/local/lib/python3.7/dist-packages/torchtext/vocab.py\", line 369, in cache\n",
+            "    zf.extractall(cache)\n",
+            "  File \"/usr/lib/python3.7/zipfile.py\", line 1636, in extractall\n",
+            "    self._extract_member(zipinfo, path, pwd)\n",
+            "  File \"/usr/lib/python3.7/zipfile.py\", line 1691, in _extract_member\n",
+            "    shutil.copyfileobj(source, target)\n",
+            "  File \"/usr/lib/python3.7/shutil.py\", line 79, in copyfileobj\n",
+            "    buf = fsrc.read(length)\n",
+            "  File \"/usr/lib/python3.7/zipfile.py\", line 907, in read\n",
+            "    def read(self, n=-1):\n",
+            "KeyboardInterrupt\n",
+            "\n",
+            "During handling of the above exception, another exception occurred:\n",
+            "\n",
+            "Traceback (most recent call last):\n",
+            "  File \"/usr/local/lib/python3.7/dist-packages/IPython/core/interactiveshell.py\", line 1823, in showtraceback\n",
+            "    stb = value._render_traceback_()\n",
+            "AttributeError: 'KeyboardInterrupt' object has no attribute '_render_traceback_'\n",
+            "\n",
+            "During handling of the above exception, another exception occurred:\n",
+            "\n",
+            "Traceback (most recent call last):\n",
+            "  File \"/usr/local/lib/python3.7/dist-packages/IPython/core/ultratb.py\", line 1132, in get_records\n",
+            "    return _fixed_getinnerframes(etb, number_of_lines_of_context, tb_offset)\n",
+            "  File \"/usr/local/lib/python3.7/dist-packages/IPython/core/ultratb.py\", line 313, in wrapped\n",
+            "    return f(*args, **kwargs)\n",
+            "  File \"/usr/local/lib/python3.7/dist-packages/IPython/core/ultratb.py\", line 358, in _fixed_getinnerframes\n",
+            "    records = fix_frame_records_filenames(inspect.getinnerframes(etb, context))\n",
+            "  File \"/usr/lib/python3.7/inspect.py\", line 1502, in getinnerframes\n",
+            "    frameinfo = (tb.tb_frame,) + getframeinfo(tb, context)\n",
+            "  File \"/usr/lib/python3.7/inspect.py\", line 1464, in getframeinfo\n",
+            "    lines, lnum = findsource(frame)\n",
+            "  File \"/usr/local/lib/python3.7/dist-packages/IPython/core/ultratb.py\", line 182, in findsource\n",
+            "    lines = linecache.getlines(file, globals_dict)\n",
+            "  File \"/usr/lib/python3.7/linecache.py\", line 47, in getlines\n",
+            "    return updatecache(filename, module_globals)\n",
+            "  File \"/usr/lib/python3.7/linecache.py\", line 136, in updatecache\n",
+            "    with tokenize.open(fullname) as fp:\n",
+            "  File \"/usr/lib/python3.7/tokenize.py\", line 449, in open\n",
+            "    encoding, lines = detect_encoding(buffer.readline)\n",
+            "  File \"/usr/lib/python3.7/tokenize.py\", line 418, in detect_encoding\n",
+            "    first = read_or_stop()\n",
+            "  File \"/usr/lib/python3.7/tokenize.py\", line 376, in read_or_stop\n",
+            "    return readline()\n",
+            "KeyboardInterrupt\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "error",
+          "ename": "KeyboardInterrupt",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -104,29 +186,17 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "BetUVtR-90t9",
-        "outputId": "c9c3b36c-087d-4a0b-fea0-520ce86331ca"
+        "id": "BetUVtR-90t9"
       },
       "source": [
         "# load spanish vectors\n",
         "\n",
-        "es_vectors = torchtext.vocab.Vectors('SBW-vectors-300-min5.txt', cache='drive/MyDrive/Saturdays.AI')\n",
+        "es_vectors = vocab.Vectors('SBW-vectors-300-min5.txt', cache='drive/MyDrive/SaturdaysAI')\n",
         "\n",
         "print(\"Hay {} palabras en el vocabulario\".format(len(es_vectors.itos)))"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Hay 1000653 palabras en el vocabulario\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
